Moving pixels to percentages and fixing alignment issues

--- a/themes/variables.scss
+++ b/themes/variables.scss
@@ -1,7 +1,7 @@
-$background-color: #022220;
-$border-color: #03201c;
-$text-color: rgb(77, 130, 123);
-$contact-color: rgb(15, 95, 93);
+$background-color: #e0f7e0;
+$border-color: #cfe8cf;
+$text-color: #2c7a2c;
+$contact-color: #388e3c;
 
 $profile-background-color: $background-color;
 $profile-border-color: $border-color;
